# hpatches-descriptors

./: README.md  readme.md
baselines/: readme.md
baselines/brief/: readme.md
baselines/sift/: readme.md
baselines/tfeat/: readme.md
c++/: .gitignore  CMakeLists.txt  hpatches_extract  main.cpp  readme.md
matlab/: hpatch_extract.m  hpatches_extract.m  readme.md
python/: hpatch_extract.py  hpatches_extract.py  readme.md
torch/: .gitignore  hpatch_extract.lua  hpatches_extract.lua  readme.md
